[package]
name = "nanval"
version = "0.2.1"
license = "MIT OR Apache-2.0"
authors = ["Longor1996 <lalongok@gmail.com>"]
edition = "2021"

description = "A no_std, zero-dependency crate for the creation and handling of NaN-tagged 64-bit floating-point values."
keywords = ["nan", "nanbox", "tagged-enum", "pointers", "tagged-pointers"]
categories = ["no-std"]

readme = "README.md"
homepage = "https://github.com/Longor1996/nanval"
repository = "https://github.com/Longor1996/nanval"

[features]
default = ["std", "cell"]
std = []
cell = []
